--- a/app/src/main/res/layout/activity_profile.xml
+++ b/app/src/main/res/layout/activity_profile.xml
@@ -12,12 +12,12 @@
         android:layout_height="match_parent"
         android:orientation="vertical">
         <Button
-            android:id="@+id/button_user"
+            android:id="@+id/p_button_menu"
             android:layout_width="36dp"
             android:layout_height="36dp"
             android:layout_gravity="right"
             android:layout_margin="16dp"
-            android:background="@drawable/icon_edit"/>
+            android:background="@drawable/icon_menu"/>
         <ScrollView
             android:layout_width="match_parent"
             android:layout_height="match_parent"
@@ -73,7 +73,7 @@
                         android:layout_marginRight="6dp"
                         android:layout_marginBottom="4dp"
                         android:fontFamily="@font/v_ccwildwordslower"
-                        android:text="Лайков поставлено: XXXX"
+                        android:text="Лайков поставлено: 0"
                         android:textSize="20sp"
                         android:textColor="@color/black"/>
                     <TextView
@@ -85,7 +85,7 @@
                         android:layout_marginRight="6dp"
                         android:layout_marginBottom="4dp"
                         android:fontFamily="@font/v_ccwildwordslower"
-                        android:text="Всего просмотрено: XXXX"
+                        android:text="Всего просмотрено: 0"
                         android:textSize="20sp"
                         android:textColor="@color/black"/>
                     <TextView
