--- a/app/src/main/res/layout/activity_profile.xml
+++ b/app/src/main/res/layout/activity_profile.xml
@@ -16,7 +16,8 @@
             android:layout_width="36dp"
             android:layout_height="36dp"
             android:layout_gravity="right"
-            android:layout_margin="16dp"
+            android:layout_margin="30dp"
+            android:contentDescription="@string/open_profile_menu"
             android:background="@drawable/icon_menu"/>
         <ScrollView
             android:layout_width="match_parent"
