--- a/app/src/main/res/layout/activity_edit_profile.xml
+++ b/app/src/main/res/layout/activity_edit_profile.xml
@@ -6,11 +6,13 @@
     android:layout_height="match_parent"
     android:orientation="vertical"
     tools:context=".view.activities.EditProfileActivity">
+
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="horizontal"
         android:gravity="start">
+
         <Button
             android:id="@+id/button_back"
             android:layout_width="30dp"
@@ -19,24 +21,28 @@
             android:layout_gravity="center"
             android:background="@drawable/icon_back"/>
     </LinearLayout>
+
     <ScrollView
         android:layout_width="match_parent"
         android:layout_height="match_parent">
+
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:orientation="vertical"
             android:gravity="center_horizontal">
+
             <ImageView
                 android:id="@+id/edit_chat_avatar"
                 android:layout_width="180dp"
                 android:layout_height="180dp"
                 android:layout_marginTop="10dp"
-                android:src="@drawable/circle_red"
+                android:src="@drawable/base_avatar"
                 android:layout_gravity="center"
                 android:contentDescription="Profile Avatar"
                 android:clickable="true"
-                android:focusable="true"/> <!-- Add clickable for avatar changes -->
+                android:focusable="true"/>
+
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
@@ -44,34 +50,34 @@
                 android:textSize="12sp"
                 android:layout_marginTop="6dp"
                 android:layout_marginBottom="16dp"/>
+
             <EditText
                 android:id="@+id/edit_username"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginRight="10dp"
-                android:layout_marginLeft="10dp"
+                android:layout_marginHorizontal="10dp"
                 android:hint="@string/username"
                 android:inputType="text"
                 android:layout_marginBottom="16dp"
                 android:padding="12dp"
                 android:background="@drawable/edit_text_background"/>
+
             <EditText
                 android:id="@+id/edit_email"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginRight="10dp"
-                android:layout_marginLeft="10dp"
+                android:layout_marginHorizontal="10dp"
                 android:hint="@string/email"
                 android:inputType="textEmailAddress"
                 android:layout_marginBottom="16dp"
                 android:padding="12dp"
                 android:background="@drawable/edit_text_background"/>
+
             <EditText
                 android:id="@+id/edit_about_me"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginRight="10dp"
-                android:layout_marginLeft="10dp"
+                android:layout_marginHorizontal="10dp"
                 android:hint="@string/about_me"
                 android:inputType="textMultiLine"
                 android:gravity="top|start"
@@ -96,16 +102,15 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:text="@string/save"
-                android:layout_marginRight="10dp"
-                android:layout_marginLeft="10dp"
+                android:layout_marginHorizontal="10dp"
                 android:layout_marginBottom="16dp"/>
+
             <Button
                 android:id="@+id/buttonChangePassword"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:text="@string/change_password"
-                android:layout_marginRight="10dp"
-                android:layout_marginLeft="10dp"
+                android:layout_marginHorizontal="10dp"
                 android:layout_marginBottom="16dp"/>
         </LinearLayout>
     </ScrollView>
