--- a/app/src/main/res/layout/activity_library.xml
+++ b/app/src/main/res/layout/activity_library.xml
@@ -14,29 +14,10 @@
         android:gravity="center_horizontal">
         <FrameLayout
             android:layout_width="match_parent"
-            android:layout_height="64dp">
-
-            <Button
-                android:id="@+id/button_info"
-                android:layout_width="48dp"
-                android:layout_height="48dp"
-                android:layout_margin="10dp"
-                android:background="@drawable/icon_info"/>
-
-            <Button
-                android:id="@+id/button_user"
-                android:layout_width="48dp"
-                android:layout_height="48dp"
-                android:layout_gravity="right"
-                android:layout_margin="10dp"
-                android:background="@drawable/icon_use"/>
-        </FrameLayout>
-        <FrameLayout
-            android:layout_width="match_parent"
             android:layout_height="30dp"
+            android:layout_marginTop="20dp"
             android:orientation="horizontal">
             <TextView
-                android:id="@+id/text_title_update"
                 android:layout_width="160dp"
                 android:layout_height="22dp"
                 android:layout_marginStart="20dp"
@@ -46,7 +27,7 @@
                 android:textSize="20sp"
                 android:textColor="@color/black"/>
             <Button
-                android:id="@+id/button_more_news"
+                android:id="@+id/button_filter"
                 android:layout_width="22dp"
                 android:layout_height="22dp"
                 android:layout_marginTop="10dp"
@@ -56,7 +37,6 @@
                 android:visibility="invisible"/>
         </FrameLayout>
         <ImageView
-            android:id="@+id/separator_2"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginTop="6dp"
@@ -67,7 +47,7 @@
             android:layout_marginBottom="60dp">
             <LinearLayout
                 android:layout_width="match_parent"
-                android:layout_height="match_parent"
+                android:layout_height="wrap_content"
                 android:orientation="vertical">
                 <LinearLayout
                     android:layout_width="match_parent"
