--- a/app/src/main/res/layout/activity_title.xml
+++ b/app/src/main/res/layout/activity_title.xml
@@ -15,7 +15,7 @@
 
         <ScrollView
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
+            android:layout_height="wrap_content"
             android:layout_marginBottom="60dp">
             <LinearLayout
                 android:layout_width="match_parent"
@@ -23,28 +23,30 @@
                 android:orientation="vertical">
                 <FrameLayout
                     android:layout_width="320dp"
-                    android:layout_height="wrap_content"
+                    android:layout_height="match_parent"
                     android:layout_marginTop="20dp"
                     android:layout_gravity="center"
                     android:background="@drawable/rectangle_long">
                     <LinearLayout
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
+                        android:layout_width="match_parent"
+                        android:layout_height="match_parent"
                         android:layout_gravity="center"
                         android:layout_marginTop="4dp"
                         android:orientation="vertical">
                         <ImageView
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"
+                            android:id="@+id/title_image"
+                            android:layout_width="match_parent"
+                            android:layout_height="match_parent"
+                            android:layout_gravity="center"
                             android:layout_marginTop="4dp"
                             android:src="@drawable/none_title_image"/>
 
                         <TextView
-                            android:id="@+id/n_comics_name"
+                            android:id="@+id/t_comics_name"
                             android:layout_width="wrap_content"
-                            android:layout_height="22dp"
+                            android:layout_height="wrap_content"
                             android:layout_margin="5dp"
-                            android:layout_gravity="center_horizontal"
+                            android:layout_gravity="center|center_horizontal"
                             android:fontFamily="@font/d_ccmonologous"
                             android:text="@string/name"
                             android:textSize="20sp"
@@ -66,7 +68,7 @@
                         android:layout_marginTop="4dp"
                         android:layout_gravity="center">
                         <TextView
-                            android:id="@+id/n_date"
+                            android:id="@+id/t_date"
                             android:layout_width="wrap_content"
                             android:layout_height="22dp"
                             android:fontFamily="@font/d_ccmonologous"
@@ -81,7 +83,7 @@
                             android:textSize="20sp"
                             android:textColor="@color/black"/>
                         <TextView
-                            android:id="@+id/n_type"
+                            android:id="@+id/t_type"
                             android:layout_width="wrap_content"
                             android:layout_height="22dp"
                             android:fontFamily="@font/v_ccwildwordslower"
@@ -104,6 +106,7 @@
                             android:layout_height="wrap_content"
                             android:layout_gravity="center">
                             <Button
+                                android:id="@+id/b_info"
                                 android:layout_width="wrap_content"
                                 android:layout_height="wrap_content"
                                 android:text="@string/info"
@@ -112,6 +115,7 @@
                                 android:fontFamily="@font/v_ccwildwordslower"
                                 android:textColor="@color/dark_blue"/>
                             <Button
+                                android:id="@+id/b_chapters"
                                 android:layout_width="wrap_content"
                                 android:layout_height="wrap_content"
                                 android:text="@string/chapters"
@@ -120,6 +124,7 @@
                                 android:fontFamily="@font/v_ccwildwordslower"
                                 android:textColor="@color/black"/>
                             <Button
+                                android:id="@+id/b_chats"
                                 android:layout_width="wrap_content"
                                 android:layout_height="wrap_content"
                                 android:text="@string/discussions"
@@ -139,6 +144,7 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content">
                     <LinearLayout
+                        android:id="@+id/info_page"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:orientation="vertical"
@@ -152,7 +158,7 @@
                             android:layout_marginRight="20dp"
                             android:background="@drawable/background_rectangle">
                             <TextView
-                                android:id="@+id/n_text"
+                                android:id="@+id/t_description"
                                 android:layout_width="wrap_content"
                                 android:layout_height="wrap_content"
                                 android:layout_marginTop="6dp"
@@ -177,7 +183,7 @@
                                 android:layout_height="wrap_content"
                                 android:orientation="vertical">
                                 <TextView
-                                    android:id="@+id/n_text_genres"
+                                    android:id="@+id/t_genres"
                                     android:layout_width="wrap_content"
                                     android:layout_height="wrap_content"
                                     android:layout_marginTop="6dp"
@@ -188,7 +194,7 @@
                                     android:textSize="16sp"
                                     android:textColor="@color/black"/>
                                 <TextView
-                                    android:id="@+id/n_text_tags"
+                                    android:id="@+id/t_tags"
                                     android:layout_width="wrap_content"
                                     android:layout_height="wrap_content"
                                     android:layout_marginLeft="10dp"
@@ -200,7 +206,6 @@
                             </LinearLayout>
 
                         </FrameLayout>
-
                         <FrameLayout
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
@@ -223,7 +228,7 @@
                                     android:textSize="16sp"
                                     android:textColor="@color/black"/>
                                 <TextView
-                                    android:id="@+id/n_authors"
+                                    android:id="@+id/t_authors"
                                     android:layout_width="wrap_content"
                                     android:layout_height="wrap_content"
                                     android:layout_marginTop="6dp"
@@ -238,10 +243,10 @@
                         <LinearLayout
                             android:layout_width="match_parent"
                             android:layout_height="200dp"
-                            android:orientation="vertical">
+                            android:orientation="vertical"
+                            android:visibility="invisible">
 
                             <TextView
-                                android:id="@+id/text_title_similar"
                                 android:layout_width="160dp"
                                 android:layout_height="22dp"
                                 android:layout_marginStart="20dp"
@@ -277,9 +282,9 @@
                                     app:srcCompat="@drawable/none"/>
                             </LinearLayout>
                         </LinearLayout>
-
                     </LinearLayout>
                     <LinearLayout
+                        android:id="@+id/chapters_page"
                         android:layout_width="match_parent"
                         android:layout_height="match_parent"
                         android:layout_gravity="center_horizontal"
@@ -388,6 +393,7 @@
                         </FrameLayout>
                     </LinearLayout>
                     <LinearLayout
+                        android:id="@+id/chats_page"
                         android:layout_width="match_parent"
                         android:layout_height="match_parent"
                         android:layout_gravity="center_horizontal"
