--- a/app/src/main/res/layout/fragment_login.xml
+++ b/app/src/main/res/layout/fragment_login.xml
@@ -43,7 +43,7 @@
             android:layout_height="wrap_content"
             android:layout_marginRight="10dp"
             android:layout_marginLeft="10dp"
-            android:hint="@string/username_or_email"
+            android:hint="@string/email"
             android:inputType="text"
             android:layout_marginBottom="16dp"
             android:padding="12dp"
