--- a/app/src/main/res/layout/activity_read.xml
+++ b/app/src/main/res/layout/activity_read.xml
@@ -56,7 +56,7 @@
             android:layout_height="wrap_content"
             android:orientation="vertical">
             <ImageView
-                android:id="@+id/image"
+                android:id="@+id/t_image"
                 android:layout_width="wrap_content"
                 android:layout_height="match_parent"
                 android:adjustViewBounds="true"
@@ -70,7 +70,8 @@
                     android:id="@+id/button_pevious_chapter"
                     android:layout_width="100dp"
                     android:layout_height="40dp"
-                    android:text="&lt; назад"/>
+                    android:text="&lt; назад"
+                    android:visibility="invisible"/>
                 <Button
                     android:id="@+id/button_like"
                     android:layout_width="40dp"
@@ -78,12 +79,14 @@
                     android:layout_marginStart="10dp"
                     android:layout_marginEnd="10dp"
                     android:layout_gravity="center"
-                    android:background="@drawable/icon_like_circle"/>
+                    android:background="@drawable/icon_like_circle"
+                    android:visibility="invisible"/>
                 <Button
                     android:id="@+id/button_next_chapter"
                     android:layout_width="100dp"
                     android:layout_height="40dp"
-                    android:text="Дальше >"/>
+                    android:text="Дальше >"
+                    android:visibility="invisible"/>
             </LinearLayout>
             <Button
                 android:id="@+id/button_return"
